@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST sphinxcontrib-blockdiag-0.6.1.tar.gz 5222 RMD160 ca4d27cbe672e104345c1b8d55cca8c60d94b393 SHA1 4493f9641cf1fcc32ab8209c803aa7092cb3418b SHA256 4291636abbde7d817a43350b7b57f394e6b31ba5a048ff1b4111ca8f7d22a880
 DIST sphinxcontrib-blockdiag-0.6.3.tar.gz 5213 RMD160 9ea85a0702abd55e856cf6f574bb4957199a7bb7 SHA1 c66d8f6bf75924969dd66bac3705eb4e072bfa57 SHA256 2011a8f4e8459957a0d112f85c4ab146e0121e68620dd3a77e184b69e2fa2e77
+DIST sphinxcontrib-blockdiag-0.7.0.tar.gz 5360 RMD160 12281ab04e2db5bde633821dac2106f16ed82369 SHA1 ccc122b7eadefd726d65b679355160ed9fc25f27 SHA256 3e68d98d24bda29d120c8d4c8763a8814a51f45fdf21b55dbac909cf35109e6b
 EBUILD sphinxcontrib-blockdiag-0.6.1.ebuild 601 RMD160 30220163f34443dab6f52d17136566f1c41485bc SHA1 6fced8915f15ef57141600226135836489e748c9 SHA256 01e6497d909e2300fb0251b0f6fb743af19f3a69df5f84ae2f1f77ca4e00cb99
 EBUILD sphinxcontrib-blockdiag-0.6.3.ebuild 603 RMD160 c77be8b7c2755155e291fee7433e5a2c233d7e37 SHA1 daf18dbb762266bbc6c60ce8c162b875f514f8e3 SHA256 227c36c21079bca22816708e6f5bb8e263c7d21120f6de5fca03015f24909dc0
-MISC ChangeLog 2382 RMD160 b07eb3e549d4cc202bd4b059969e0f1ec335b897 SHA1 dde62c6848a5d938b0564ff679499e61c1dcc8da SHA256 ca08ba5ce22859f5ce5ba5398658dc870c1414d91ed27b50c25109f13b11464f
+EBUILD sphinxcontrib-blockdiag-0.7.0.ebuild 635 RMD160 01e6e9de82165385ebf12af219aa113170bb7d9a SHA1 9a202b508432372c9faaf626215ff75288684ff3 SHA256 96077bd62f08edb99b3e553fffe62ea10685bc3ef185b095ebf11f449d95a126
+MISC ChangeLog 2537 RMD160 80fc6aed08e48e0a1bde15a239b284e446467fe8 SHA1 7f3f5962ebe6fddfa3f8e2981637ff920558f129 SHA256 09a4ae6b2aaafa3d81453287bc00f3c6884854f95d52307863bf302e48861056
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1dE0QACgkQzJrj3cAXR0neNwCgno5xltTIFy7buc9OYiO23ZUl
-4N8An1gZDGLGLfjiFYCnqiFjysgsS61s
-=665F
+iEYEARECAAYFAk1l9MoACgkQzJrj3cAXR0kK9ACfSXXITE1drlwR5laMZOBAH/mk
+sBwAoLzTiDadFK0njiY+02vqQWufEDZN
+=o4DI
 -----END PGP SIGNATURE-----
