@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+dev-python/setuptools dev-python/sphinx >=media-gfx/blockdiag-0.6.7 pdf? ( dev-python/reportlab ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/s/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-0.7.0.tar.gz
+
+http://pypi.python.org/pypi/sphinxcontrib-blockdiag/
+BSD
+Sphinx extension to support media-gfx/blockdiag diagrams
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+pdf
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
