@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sphinxcontrib-blockdiag-0.7.0 (24 Feb 2011)
+
+  24 Feb 2011; James Rowe <jnrowe@gmail.com>
+  +sphinxcontrib-blockdiag-0.7.0.ebuild:
+  Version bump [289].
+
   10 Feb 2011; James Rowe <jnrowe@gmail.com>
   -sphinxcontrib-blockdiag-0.6.ebuild, sphinxcontrib-blockdiag-0.6.1.ebuild:
   Keyworded x86.
